# jellylist

./: docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/base/utils/: authentication.py
backend/jellyfin/: apps.py  models.py  schemas.py  views.py
backend/jellyfin/migrations/: 0001_initial.py
backend/jellyfin/tests/: test_views.py
backend/jellylist/: asgi.py  urls.py  wsgi.py
backend/jellylist/settings/: __init__.py  test.py
backend/users/: models.py  schemas.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py
backend/users/tests/: test_views.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  store.ts  theme.ts
frontend/src/pages/: Login.tsx
frontend/src/services/: index.tsx  users.tsx
frontend/src/types/: users.d.ts
